objects/QAForm__c.object
<CustomObject>
    <fields>
        <fullName>rm_on_AdminLinks__c</fullName>
        <label>Admin Survey Links(Google/Yelp/Yahoo)(2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_on_AppBoxCk__c</fullName>
        <inlineHelpText>Admin Auto Approved Box Checked (for both sales and service)</inlineHelpText>
        <label>Admin Auto Approved Box Checked(2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_on_DlrCon__c</fullName>
        <inlineHelpText>Dealer Contacts (email configuration) 1 RMS and 1 Dealer email address</inlineHelpText>
        <label>Dealer Contacts - 1 RMS/1 Dealer(2)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_on_EnableGM__c</fullName>
        <label>**GM Only- Enable GM Prime is checked</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tpAppMess__c</fullName>
        <inlineHelpText>Third Party: Appropriate Messaging - clear &amp; concise message, addresses customer concern</inlineHelpText>
        <label>Appropriate Messaging(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tp_RateMatch__c</fullName>
        <label>Review Rating matches review content(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tp_SpellGram__c</fullName>
        <inlineHelpText>Third Pary Spelling &amp; Grammar</inlineHelpText>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tp_TimeResp__c</fullName>
        <label>Timely Response (2 wk max)(4)</label>
        <picklist>
            <picklistValues>
                <fullName>4</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tpoGoogle__c</fullName>
        <inlineHelpText>Google (Photo, categories, address, phone number, URL)</inlineHelpText>
        <label>Google(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tpoYahoo__c</fullName>
        <inlineHelpText>Yahoo (Photo, categories, address, phone number, URL)</inlineHelpText>
        <label>Yahoo(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_tpoYelp__c</fullName>
        <inlineHelpText>Yelp (Photo, categories, address, phone number, URL)</inlineHelpText>
        <label>Yelp(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_wo_rw_PgImg__c</fullName>
        <label>Review Page Image(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_wo_rw_PgResp__c</fullName>
        <label>Review Page Biz Response Title(1)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_wo_sa_PgImg__c</fullName>
        <label>Review Page Image(0.5)</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_wo_sa_PgResp__c</fullName>
        <label>Review Page Biz Response Title(0.5)</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_wo_sa_Retail__c</fullName>
        <label>Retail Website Linkage(0.5)</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rm_wo_saopt__c</fullName>
        <inlineHelpText>Website Optimization: Stand Alone: Dealer Photo, tag line, third pary sharing widget optimized- big three</inlineHelpText>
        <label>Photo,Tagline,Widget optimized(0.5)</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_Email_Campaign__c</fullName>
        <label>Email Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sm_Sec1_Poss__c</fullName>
        <formula>15 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sm_Sec1_Tot__c</fullName>
        <label>Facebook Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sm_Sec2_Poss__c</fullName>
        <formula>12 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sm_Sec2_Tot__c</fullName>
        <label>Twitter Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sm_Sec3_Poss__c</fullName>
        <formula>12 * 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sm_Sec3_Tot__c</fullName>
        <label>Google Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sm_fb_ConFlowContent__c</fullName>
        <inlineHelpText>Consistent flow of applicable timely content</inlineHelpText>
        <label>Consistent Flow of Content(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_fb_LinkOtherSites__c</fullName>
        <inlineHelpText>Links to other social sites and retail site</inlineHelpText>
        <label>Link to other social/retail sites(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_fb_Pageopt__c</fullName>
        <inlineHelpText>Facebook Page optimized with up-to-date dealer branding</inlineHelpText>
        <label>Page optimized with dealer branding(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_fb_RespNegPost__c</fullName>
        <inlineHelpText>Respond to negative wall posts and comments within 1 business day</inlineHelpText>
        <label>Respond to neg posts within 1 day(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_fb_SpellGram__c</fullName>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_go_Currpostcont__c</fullName>
        <label>Current posted content(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_go_LinkOtherSites__c</fullName>
        <inlineHelpText>Links to other social sites and retail site</inlineHelpText>
        <label>Link to other social/retail sites(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_go_Pageopt__c</fullName>
        <inlineHelpText>Page optimized with up-to-date dealer branding</inlineHelpText>
        <label>Page optimized with dealer branding(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_go_SpellGram__c</fullName>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_tw_ConFlowContent__c</fullName>
        <inlineHelpText>Consistent flow of applicable timely content</inlineHelpText>
        <label>Consistent Flow of Content(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_tw_Pageopt__c</fullName>
        <inlineHelpText>Page optimized with up-to-date dealer branding</inlineHelpText>
        <label>Page optimized with dealer branding(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_tw_SpellGram__c</fullName>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_tw_linkretail__c</fullName>
        <label>Link to retail site(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_wp_Pageopt__c</fullName>
        <inlineHelpText>Wordpress page optimized with dealer branding</inlineHelpText>
        <label>Page optimized with dealer branding(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_wp_SpellGram__c</fullName>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_wp_SteadyBlogCad__c</fullName>
        <label>Steady Blog Cadence(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_yt_Currvidcont__c</fullName>
        <label>Current video content(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_yt_LinkOtherSites__c</fullName>
        <inlineHelpText>Link to other social sites and retail site</inlineHelpText>
        <label>Link to other social/retail sites(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_yt_Pageopt__c</fullName>
        <inlineHelpText>Page optimized with up-to-date dealer branding</inlineHelpText>
        <label>Page optimized with dealer branding(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sm_yt_SpellGram__c</fullName>
        <label>Spelling &amp; Grammar(3)</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QAForm</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>QAForm</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QAForms</pluralLabel>
    <recordTypes>
        <fullName>QA_DA</fullName>
        <active>true</active>
        <description>QA Evaluation for DA</description>
        <label>QA - DA</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_EMS</fullName>
        <active>true</active>
        <description>QA Evalutation for Email Marketing</description>
        <label>QA - EMS</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_RepMan</fullName>
        <active>true</active>
        <description>QA Evalutation for Reputation Management</description>
        <label>QA - RepMan</label>
    </recordTypes>
    <recordTypes>
        <fullName>QA_Social_Media</fullName>
        <active>true</active>
        <description>QA Evalutation for Social Media</description>
        <label>QA - Social Media</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>